Optimized and changed

--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Attitude - Conference Template</title>
+	<title>Aera Residence</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
-
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="assets/styles/vendors.min.css" />
 	<link rel="stylesheet" href="style.css" />
-
 	<!-- JavaScripts -->
 	<script src="assets/javascripts/vendor.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=Hind:300,400,500,600,700|Poppins:300,400,500,600,700&amp;subset=devanagari,latin-ext"
-	 rel="stylesheet">
 </head>
 
 <body>
@@ -103,14 +99,14 @@
 					<div class="grid-container inner-padding">
 						<div class="grid-x">
 							<div data-aos="fade-right" class="cell medium-7 large-4">
-								<object type="image/svg+xml" data="assets/svg/yoga.svg"></object>
-								<object type="image/svg+xml" data="assets/svg/restaurant.svg"></object>
-								<object type="image/svg+xml" data="assets/svg/pool.svg"></object>
-								<object type="image/svg+xml" data="assets/svg/drinks.svg"></object>
+								<i class="fi flaticon-exercise"></i>
+								<i class="fi flaticon-restaurant"></i>
+								<i class="fi flaticon-swimming-pool"></i>
+								<i class="fi flaticon-drinks"></i>
 								<h3>Lifestyle Focused</h3>
 								<!-- /.section-title -->
 								<p>
-									Subheadline: An impressive variety of facilities are at your disposal here at Aera Residence. Exuding a resort-style ambiance
+									An impressive variety of facilities are at your disposal here at Aera Residence. Exuding a resort-style ambiance
 									with lush palm trees, you can lounge around the pool, dive into the cool waters for respite, and stretch your tension
 									away at the yoga deck.
 								</p>
@@ -163,21 +159,16 @@
 							<h5>SHOPPING MALLS</h5>
 							<ul>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/shopping.svg"></object>
-									<span class="place">Aeon Big Subang</span>
-									<span class="distance">6.3 km</span>
+									<i class="fi flaticon-shopping-bag"></i>Aeon Big Subang<span class="distance">6.3 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/shopping.svg"></object>Subang Parade
-									<span class="distance">11 km</span>
+									<i class="fi flaticon-shopping-bag"></i>Subang Parade<span class="distance">11 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/shopping.svg"></object>Sunway Pyramid
-									<span class="distance">4 km</span>
+										<i class="fi flaticon-shopping-bag"></i>Sunway Pyramid<span class="distance">4 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/shopping.svg"></object>Empire Shopping Gallery
-									<span class="distance">6.3 km</span>
+									<i class="fi flaticon-shopping-bag"></i>Empire Shopping Gallery<span class="distance">6.3 km</span>
 								</li>
 							</ul>
 						</div>
@@ -185,19 +176,23 @@
 							<h5>HOTELS</h5>
 							<ul>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hotel.svg"></object>Sunway Resort Hotel
+									<i class="fi flaticon-hotel-with-three-floors"></i>
+									Sunway Resort Hotel
 									<span class="distance">4.3 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hotel.svg"></object>Empire Hotel Subang
+									<i class="fi flaticon-hotel-with-three-floors"></i>
+									Empire Hotel Subang
 									<span class="distance">6.3 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hotel.svg"></object>Hilton Hotel PJ
+									<i class="fi flaticon-hotel-with-three-floors"></i>
+									Hilton Hotel PJ
 									<span class="distance">7 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hotel.svg"></object>Sheraton Hotel
+									<i class="fi flaticon-hotel-with-three-floors"></i>
+									Sheraton Hotel
 									<span class="distance">8.2 km</span>
 								</li>
 							</ul>
@@ -206,16 +201,19 @@
 							<h5>PARKS</h5>
 							<ul>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/parks.svg"></object>Extreme Park Sunway
+									<i class="fi flaticon-landscape"></i>
+									Extreme Park Sunway
 									<span class="distance">5.6 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/parks.svg"></object>Subang Ria Park
+									<i class="fi flaticon-landscape"></i>
+									Subang Ria Park
 									<span class="distance">5.4 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/parks.svg"></object>Sunway Lagoon Theme Park
-									<span class="distance">5.4 km</span>
+									<i class="fi flaticon-landscape"></i>
+									Sunway Lagoon Theme Park
+									<span class="distance">4.3 km</span>
 								</li>
 							</ul>
 						</div>
@@ -223,15 +221,18 @@
 							<h5>HOSPITALS</h5>
 							<ul>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hospital.svg"></object>Sunway Medical Centre
+								<i class="fi flaticon-medical-kit"></i>
+								Sunway Medical Centre
 									<span class="distance">5.1 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hospital.svg"></object>Sime Darby Medical Centre
+								<i class="fi flaticon-medical-kit"></i>
+								Sime Darby Medical Centre
 									<span class="distance">5.3 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/hospital.svg"></object>University Hospital
+								<i class="fi flaticon-medical-kit"></i>
+								University Hospital
 									<span class="distance">9.5 km</span>
 								</li>
 							</ul>
@@ -240,15 +241,18 @@
 							<h5>AIRPORTS</h5>
 							<ul>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/plane.svg"></object>KLIA
+									<i class="fi flaticon-plane"></i>
+									KLIA
 									<span class="distance">53.6 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/plane.svg"></object>KLIA2
+									<i class="fi flaticon-plane"></i>
+									KLIA2
 									<span class="distance">51.2 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/plane.svg"></object>Subang Airport
+									<i class="fi flaticon-plane"></i>
+									Subang Airport
 									<span class="distance">12.5 km</span>
 								</li>
 							</ul>
@@ -257,15 +261,18 @@
 							<h5>GOLF CLUBS</h5>
 							<ul>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/golf.svg"></object>Subang National Golf Club
+									<i class="fi flaticon-golf"></i>
+									Subang National Golf Club
 									<span class="distance">6 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/golf.svg"></object>Glenmarie Golf & Country Club
+									<i class="fi flaticon-golf"></i>
+									Glenmarie Golf & Country Club
 									<span class="distance">10.6 km</span>
 								</li>
 								<li>
-									<object type="image/svg+xml" data="assets/svg/golf.svg"></object>Saujana Golf & Country Club
+									<i class="fi flaticon-golf"></i>
+									Saujana Golf & Country Club
 									<span class="distance">9.4 km</span>
 								</li>
 							</ul>
@@ -373,17 +380,15 @@
 							</header>
 							<!-- /.section-head -->
 							<div class="section-body">
-								<form data-abide novalidate>
-									<div data-abide-error class="alert callout" style="display: none;">
-										<p>
-											<i class="fi-alert"></i> There are some errors in your form.</p>
-									</div>
-
+								<form name="contactform"  id="submitForm" action="https://formspree.io/your@email.com" method="POST" data-abide novalidate>
+									<p data-abide-error id="prompt" style="display: none;">
+										There are some problems with your details
+									</p>
 									<!-- First Name -->
 									<div class="grid-x grid-margin-x">
 										<div class="cell small-12 medium-4 ">
 											<label>
-												<input type="text" placeholder="Your Name" aria-describedby="Insert Your Name" required>
+												<input class="formVal" type="text" placeholder="Your Name" aria-describedby="Insert Your Name" name="name" required>
 												<span class="form-error">
 													Name is required
 												</span>
@@ -392,7 +397,7 @@
 										<!-- Email -->
 										<div class="cell small-12 medium-4">
 											<label>
-												<input type="email" placeholder="Email" aria-describedby="Insert Your Email" required>
+												<input class="formVal" type="email" placeholder="Email" name="email" aria-describedby="Insert Your Email" required>
 												<span class="form-error">
 													Email address is required
 												</span>
@@ -401,7 +406,7 @@
 										<!-- contact -->
 										<div class="cell small-12 medium-4 ">
 											<label>
-												<input type="tel" placeholder="Contact Number" aria-describedby="Contact Number" required>
+												<input class="formVal" type="tel" placeholder="Contact Number" name="contact_no" aria-describedby="Contact Number" required>
 												<span class="form-error">
 													Phone Number is required
 												</span>
@@ -410,13 +415,15 @@
 										<!-- /.grid-x .grid-margin-x -->
 										<!-- Submit Button -->
 										<fieldset class="cell medium-8">
-											<input id="checkbox1" type="checkbox">
+											<input id="checkbox1" type="checkbox" required>
 											<label class="small-text" for="checkbox1">I confirm that I have read and understand your Privacy Policy and hereby consent to the collection and processing
 												of my personal data by or on behalf of Chin Hin Property Development and/or its related corporations, jointly
-												controlled companies, associates, saffiliates and partners in accordance therewith.</label>
+												controlled companies, associates, saffiliates and partners in accordance therewith.
+												<p class="form-error">Agreement is required</p>
+											</label>
 										</fieldset>
 										<fieldset class="cell medium-4">
-											<button class="button action-button purple expanded" type="submit" value="Submit">Send Now</button>
+											<button id="submitForm" class="button action-button purple expanded" type="submit" value="Submit">Send Now</button>
 										</fieldset>
 								</form>
 								</div>
